--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2,6 +2,23 @@ html {
   scroll-behavior: smooth;
 }
 
+/* Animating dropdown navbar */
+.navbar .nav-item:not(:last-child) {
+  margin-right: 35px;
+}
+
+.dropdown-toggle::after {
+   transition: transform 0.15s linear; 
+}
+
+.show.dropdown .dropdown-toggle::after {
+  transform: translateY(3px);
+}
+
+.dropdown-menu {
+  margin-top: 0;
+}
+
 /* Setting fonts */
 body {
   margin: 0;
