--- a/static/css/main.css
+++ b/static/css/main.css
@@ -479,6 +479,10 @@ h5 {
   animation: spin 2s linear infinite;
 }
 
+.top-buffer {
+  margin-top: 10%;
+}
+
 @-webkit-keyframes spin {
   0% { -webkit-transform: rotate(0deg); }
   100% { -webkit-transform: rotate(360deg); }
