--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2,6 +2,13 @@ html {
   scroll-behavior: smooth;
 }
 
+iframe{
+  width : 100%;
+  height: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .bg { 
   /* The image used */
   background-image: "Teamlogo.png";
