--- a/static/css/main.css
+++ b/static/css/main.css
@@ -543,7 +543,11 @@ h5 {
 }
 
 .profile-pic{
-  width: 80%;
-  height: 80%;
+  border-radius: 50%;
+}
+
+.circular--square {
+  width: 150px;
+  height: 150px;
   border-radius: 50%;
 }
