--- a/static/css/main.css
+++ b/static/css/main.css
@@ -655,5 +655,17 @@ right connector from last child*/
 	border-color:  #94a0b4;
 }
 
+.legend {
+  line-height: 18px;
+  color: #555;
+}
+.legend i {
+  width: 18px;
+  height: 18px;
+  float: left;
+  margin-right: 8px;
+  opacity: 0.7;
+}
+
 /*Thats all. I hope you enjoyed it.
 Thanks :)*/
