added correct linkedin url's

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -84,7 +84,7 @@ header h1.logo {
   display: block;
   height: 5px;
   width: 0%;
-  background-color: #be1e2d;
+  background-color: #4A746A;
   
   transition: all ease-in-out 250ms;
 }
