--- a/static/css/main.css
+++ b/static/css/main.css
@@ -667,5 +667,17 @@ right connector from last child*/
   opacity: 0.7;
 }
 
+.health_legend {
+  line-height: 18px;
+  color: #555;
+}
+.health_legend i {
+  width: 18px;
+  height: 18px;
+  float: left;
+  margin-right: 8px;
+  opacity: 0.7;
+}
+
 /*Thats all. I hope you enjoyed it.
 Thanks :)*/
